# cv

./: .gitignore  CLAUDE.md  README.md  cv-csgi-sde2-en.json  cv-pt.json  cv.json  generate.py  pyproject.toml  requirements.txt
companies/ahamad-alroz/: cv-en.json
companies/csgi-sde2/: cv-en.json
companies/ed/: cv-en.json  cv-pt.json  description.md
companies/flowa/: cv-en.json  cv-pt.json
companies/owlish/: cv-en.json
